Remove OAuth2 from several controller actions
